--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -23,6 +23,7 @@
         android:text="@string/weather_forecast"
         android:textAlignment="center"
         android:layout_alignParentBottom="true"
+        android:background="@color/col_bg_btn"
         android:textSize="18sp" />
 
 </RelativeLayout>
