--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="col_white">#fff</color>
+    <color name="col_ccc">#EBEBEB</color>
+    <color name="col_dark">#202020</color>
+    <color name="col_gray">#a1a1a1</color>
+
+    <color name="col_bg_btn">#F9AA33</color>
 </resources>
