--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -16,15 +16,17 @@
         tools:ignore="UselessParent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
             >
             <ImageView
                 android:id="@+id/imgWeather"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
                 android:contentDescription="@string/app_name"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
@@ -46,7 +48,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="2"
             >
