--- a/app/src/main/res/layout/no_connection_view.xml
+++ b/app/src/main/res/layout/no_connection_view.xml
@@ -8,7 +8,7 @@
         android:layout_height="128dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/err_connection"
         android:contentDescription="@string/app_name"
         android:layout_gravity="center"/>
     <TextView
